stylesheet.less
/* ... */
/* COMPANY NAME */

.widget.companyname {
  display: inline-block;
  vertical-align: middle;
}

.companyname a:hover {
  text-decoration: none;
}

.widget.companyname a {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
}

/* LOGO */

.widget.logo {
  
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
    padding: 1em 0;
    color: @color-swatch1;
}

.bk-footer h1,
.bk-footer h2,
.bk-footer h3,
.bk-footer h4 {
    padding-bottom: 20px;
}

/* ===============================
   STANDARD NAVIGATION
   =============================== */

.widget.navigation {

}

.widget.navigation ul {
    padding: 0;
    margin: 30px 0;
}

.widget.navigation ul.align-center li {
    text-align: center
}

.widget.navigation ul.align-left li {
    text-align: left
}

.widget.navigation ul.align-right li {
    text-align: right
}

.widget.navigation ul li {
    float: left;
    display: block;
    padding-right: 40px;
}

.widget.navigation ul li a {
    display: block;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
}

.widget.navigation ul li a:hover {
    text-decoration: none;
    color: @color-swatch3;
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget.extendednavigation {
    position: relative;
    margin: 12px 0;
}

.widget.extendednavigation a.pull {
    top:-58px;
}

.widget.extendednavigation ul {
    float: left;
    margin: 0;
    padding: 0;
}

/* ALIGNMENTS */

.widget.extendednavigation ul.align-center li,
.widget.extendednavigation ul.align-center li:hover ul li {
    text-align: center
}

.widget.extendednavigation ul.align-left li,
.widget.extendednavigation ul.align-left li:hover ul li {
    text-align: left
}

.widget.extendednavigation ul.align-right li,
.widget.extendednavigation ul.align-right li:hover ul li {
    text-align: right
}

.widget.extendednavigation ul li {
    float: left;
    display: block;
    &.selected a {
      background: @color-swatch3;
      color: @color-swatch5;
      @media @tablet {
        padding-left: 5px;
        padding-right: 5px;
      }
    }
}

.widget.extendednavigation ul li a {
    display: block;
    padding: 4px 20px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
}

.widget.extendednavigation ul li.folder .text {
    display: block;
    padding: 4px 30px 4px 20px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
  }

.widget.extendednavigation ul li a:hover,
.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
    text-decoration: none;
}

/* FOLDER */

.widget.extendednavigation ul li.folder {
    cursor: pointer;
}

.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
}

/* DROPDOWN MENU */

.widget.extendednavigation li > ul {
    display: none;
}

.widget.extendednavigation li:hover > ul {
    display: block;
    position: absolute;
    background-color: @color-swatch1;
    border: 1px solid darken(@color-swatch2,10%);
    z-index: 500;
    padding: 10px 0;
    margin: 0;
}

.widget.extendednavigation li:hover > ul > li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.widget.extendednavigation li:hover > ul > li > a {
    display: block;
    color: @color-swatch5;
    padding: 0;
    text-align: left;
}

/* EXTENDED NAVIGATION - INSIDE ZONE */

.main .widget.extendednavigation {
    max-width: 100%;
    width: 100%;
    float: none;
}

.main .widget.extendednavigation:before,
.main .widget.extendednavigation:after {
    content: " ";
    display: table;
}

.main .widget.extendednavigation:after {
    clear: both
}

.main .widget.extendednavigation {
    *zoom: 1
}

/* ===============================
   FEATURE = 3 image widgets
   =============================== */

 .feature {
  max-width: 980px;
  padding: 0 10px;
  height: auto;
  margin: 0 auto;
  overflow: hidden;
  position: relative;
 }

 /* IMAGE 1 */

.feature-img-one {
  float: left;
  width: 100%;
}

.feature-img-one .image-img, .feature-img-one .widget.image span.image-title, .feature-img-one .widget.image span.image-description {
  float: right;
}

.feature-img-one .image-img {
  width: 73%;
}

.feature-img-one .widget.image span.image-title, .feature-img-one .widget.image span.image-description {
  width: 25%;
  text-align: right;
  margin-right: 2%;
}

.feature-img-one .widget.image span.image-title {
  margin-top: 0;
}

.feature-img-one .widget.image span.image-description {
  background-image: image('/images/greytriangle-right.png');
  background-size: 15px;
  background-position: bottom right;
  background-repeat: no-repeat;
  padding-bottom: 25px;
}

.feature-img-one .bk-overlay.hover .bk-icons-bar {
  height: 447px;
}




 /* IMAGE 2 */

.feature-img-two {
  width: 57%;
  float: right;
  margin-top: -20px;
  z-index: 3;
}

.feature-img-two .image-img, .feature-img-two .widget.image span.image-title, .feature-img-two .widget.image span.image-description {
  float: left;
}

.feature-img-two .image-img {
  width: 64%;
}
/* ... */

